@@ -43,7 +43,7 @@ switch ($_GET['sidx']) {
   records: "<?php echo $records ?>",
   rows : [
     <?php
-    apm_get_events($_GET['rows'], ($_GET['page'] - 1) * $_GET['rows'], $order, $_GET['sord'] === 'asc', true);
+    apm_get_events($_GET['rows'], ($_GET['page'] - 1) * $_GET['rows'], $order, $_GET['sord'] === 'asc');
     ?>
   ]
 }
